# ZoomArtists

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  skills-lock.json
.claude/skills/run-project/: SKILL.md  dev-down.ps1  dev-up.ps1
backend/: pyproject.toml  seed.py
backend/alembic/: env.py
backend/alembic/versions/: 20260614_d6e7f519b4c0_initial_schema.py
backend/app/: main.py
backend/app/api/: deps.py  errors.py
backend/app/api/routes/: artists.py  auth.py  events.py  venues.py
backend/app/api/schemas/: artist.py  auth.py  event.py  user.py  venue.py
backend/app/application/: __init__.py  artists.py  auth.py  dto.py  events.py  ports.py  venues.py
backend/app/domain/: __init__.py  entities.py  errors.py
backend/app/infrastructure/: __init__.py  config.py
backend/app/infrastructure/persistence/: database.py  mappers.py  repositories.py
backend/app/infrastructure/persistence/models/: __init__.py  artist.py  base.py  event.py  user.py  venue.py
backend/app/infrastructure/security/: password_hasher.py  token_service.py
frontend/: package-lock.json  package.json
frontend/src/: styles.scss
frontend/src/app/: app.routes.ts  app.ts
frontend/src/app/core/guards/: organizer.guard.ts
frontend/src/app/core/interceptors/: auth.interceptor.ts
frontend/src/app/core/models/: artist.model.ts  event.model.ts  user.model.ts  venue.model.ts
frontend/src/app/core/services/: auth.service.ts  event.service.ts  geolocation.service.ts  venue.service.ts
frontend/src/app/features/auth/: auth.component.ts
specs/: SPECS.md
(+14 files in other folders)
